# linuxPlayground

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Board/: CMakeLists.txt
Board/inc/: Board.h  BoardManager.h  Move.h  PlayerType.h  Square.h
Board/src/: Board.cpp  BoardManager.cpp  Move.cpp  Square.cpp
Board/test/: CMakeLists.txt  TestBoard.cpp  TestBoardManager.cpp  TestMove.cpp  TestSquare.cpp
Piece/: CMakeLists.txt
Piece/inc/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h  TypeOfPiece.h
Piece/src/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  TypeOfPiece.cpp
Piece/test/: CMakeLists.txt  TestBishop.cpp  TestKing.cpp  TestKnight.cpp  TestPawn.cpp  TestQueen.cpp  TestRook.cpp
Utils/: CMakeLists.txt
Utils/inc/: Color.h  Position.h
Utils/src/: Position.cpp
Utils/test/: CMakeLists.txt  TestPosition.cpp
